k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    networking.gke.io/managed-certificates: "bitkod-cert,admin-cert"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "36000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "36000"
    nginx.ingress.kubernetes.io/websocket-services: spring-backend
spec:
  rules:
    - host: www.bitkod.org
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: spring-backend
                port:
                  number: 8040
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: admin.bitkod.org
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: spring-backend
                port:
                  number: 8040
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
